Fixed align-items/align-self problem, think about which element is the flex container and which is the flex item

--- a/styles/homepage-styles.css
+++ b/styles/homepage-styles.css
@@ -7,19 +7,20 @@ html{
     margin:0;
     padding:0; /* default for <ul> is padding-left:40px; margin: 1em 0 1em 0;*/
     font-size: 14px;
+    height:auto; /*set a height on the flex container to ensure align-items/align-self works*/
     display:flex;
     justify-content: space-between; /*put one half (header left/right) on each side, space between*/
-
 }
 .google-header-list-left {
     display:flex;
+    align-items:center;
 }
 .google-header-list-right {
     display:flex;
-    
+    align-items:center;
 }
 .google-header-list-item {
-  
+
 }
 #google-header-user-icon{
     border-radius:50%;
